--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,10 @@
 {
-  "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "http://31.220.76.227:8001/$1"
+  "functions": {
+    "api/proxy/[...path].js": {
+      "maxDuration": 30
     },
-    {
-      "source": "/api2/(.*)",
-      "destination": "http://31.220.76.227:8002/$1"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/index.html"
+    "api/upload/[...path].js": {
+      "maxDuration": 30
     }
-  ]
+  }
 }
